--- a/mandelbulber2/formula/ui/transf_difs_hexprism_v2.ui
+++ b/mandelbulber2/formula/ui/transf_difs_hexprism_v2.ui
@@ -1087,7 +1087,7 @@
         <property name="text">
          <string notr="true">&lt;p&gt;http://www.iquilezles.org/www/articles/distfunctions/distfunctions.htm&lt;/p&gt;&lt;table&gt;
 &lt;/table&gt;
-&lt;h3&gt;Code&lt;/h3&gt;</string>
+&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/amazingIFS hex.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
         </property>
         <property name="wordWrap">
          <bool>true</bool>
