--- a/mandelbulber2/formula/ui/transf_difs_spring.ui
+++ b/mandelbulber2/formula/ui/transf_difs_spring.ui
@@ -616,7 +616,7 @@
         <property name="text">
          <string notr="true">&lt;p&gt;TransfDIFSSpring&lt;/p&gt;&lt;table&gt;
 &lt;/table&gt;
-&lt;h3&gt;Code&lt;/h3&gt;</string>
+&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/T_DIFS Spring MixPinski.fract&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/T_DIFS Spring PolyFld.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
         </property>
         <property name="wordWrap">
          <bool>true</bool>
