--- a/mandelbulber2/formula/ui/transf_add_cpixel_sphere_fold.ui
+++ b/mandelbulber2/formula/ui/transf_add_cpixel_sphere_fold.ui
@@ -217,7 +217,7 @@
      <item row="0" column="0" rowspan="3">
       <widget class="QLabel" name="label_15">
        <property name="text">
-        <string>sphere 
+        <string>spherell 
 fold
 offset</string>
        </property>
